...
    <string name="show_ebooks">E-boeken</string>
    <string name="show_free_ebooks">Gratis e-boeken</string>
    <string name="aboutMenuItem">Over</string>
    <string name="aboutText">Books is een applicatie waarbij je uw favoriete boeken kan toevoegen aan verschillende lijsten.\nJe kan in elke lijst je boek ook raadplegen waarbij je details van je boek kan bekijken.</string>
    <string name="searchBookTitle">Zoek een boek</string>
    <string name="emptyFavoritesList">Je hebt nog geen boeken in deze lijst</string>
    <string name="favoritesTitle">Favorieten</string>
    <string name="emptyToReadList">Nog geen boeken in deze lijst</string>
    <string name="toReadButtonText">Boek in wachtrij</string>
    <string name="finishedBooksTitle">Gelezen boeken</string>
    <string name="toReadTitle">Wachtrij</string>
    <string name="authorLabel">Geschreven door:</string>
    <string name="addInFinished">Boek gelezen</string>
    <string name="added_to_finished_books">Toegevoegd aan gelezen boeken</string>
    <string name="removed_from_finished_books">Verwijderd uit gelezen boeken</string>
    <string name="added_to_read_books">Toegevoegd aan wachtrij</string>
    <string name="removed_to_read_books">Verwijderd uit wachtrij</string>
...
