<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.books.domain.yourbooks.YourBooksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yourBooksFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/favoriteBooksContainer"
                        style="@style/yourBooksList_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/favoriteBooksTitle"
                            style="@style/yourBooksList_label"
                            android:text="@string/favoriteBooks_label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/favoriteBooksList"
                            style="@style/yourBooksList_recyclerView"
                            app:favoritesListData="@{viewModel.favoriteBooks}"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/favoriteBooksTitle"
                            tools:itemCount="4"
                            tools:listitem="@layout/book_favorites_list_item" />

                        <Button
                            android:id="@+id/toFavoritesButton"
                            style="@style/yourBooksList_button"
                            android:text="@string/favoriteBooksList_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/favoriteBooksList"
                            app:layout_constraintVertical_bias="0.0" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/toReadBooksContainer"
                        style="@style/yourBooksList_container"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/favoriteBooksContainer">

                        <TextView
                            android:id="@+id/toReadBooksTitle"
                            style="@style/yourBooksList_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/toReadBooks_label"


                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/toReadBooksList"
                            style="@style/yourBooksList_recyclerView"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/toReadBooksTitle"
                            app:toReadListData="@{viewModel.toReadBooks}"
                            tools:itemCount="4"
                            tools:listitem="@layout/book_to_read_list_item" />

                        <Button
                            android:id="@+id/toReadButton"
                            style="@style/yourBooksList_button"
                            android:text="@string/toReadBooksList_button"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/toReadBooksList" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/FinishedBooksContainer"

                        style="@style/yourBooksList_container"
                        android:layout_marginBottom="@dimen/marginLastContainer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toReadBooksContainer">

                        <TextView
                            android:id="@+id/finishedBooksTitle"
                            style="@style/yourBooksList_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/finishedBooks_label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/finishedBooksList"
                            style="@style/yourBooksList_recyclerView"
                            app:finishedBooksListData="@{viewModel.finishedBooks}"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/finishedBooksTitle"
                            tools:itemCount="4"
                            tools:listitem="@layout/finished_books_list_item" />

                        <Button
                            android:id="@+id/toFinishedBooks"
                            style="@style/yourBooksList_button"
                            android:text="@string/finishedBooksList_button"

                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/finishedBooksList" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchView"
                style="@style/circleView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/searchButton"
                    style="@style/circleViewIcon"
                    android:contentDescription="@string/search_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
