...
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/finishedBookFragment"
        android:name="com.example.books.domain.finishedbooks.FinishedBookFragment"
        android:label="Gelezen">
        <action
            android:id="@+id/action_finishedBookFragment_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
...
