...
            android:scaleType="fitCenter"
            app:imageUrl="@{book.volumeInfo.imageLinks.thumbnail}"
            tools:srcCompat="@tools:sample/avatars"
            android:onClick="@{() -> clickListener.onClick(book, `details`)}"/>

        <Button
            android:id="@+id/toReadButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_weight="1"
            android:height="30dp"
            android:text="@string/toReadButtonText"
...
