...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBooksFragment"
        style="@style/list_constraintLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchText"
            style="@style/searchBooks_searchfield"
            android:hint="@string/searchHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booksPhotosGrid"
            style="@style/searchBooks_recycleView"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchText"
...
